# app/Http/Resources/TaskResource.php
@@ -13,9 +13,24 @@ class TaskResource extends JsonResource
             'id' => $this->id,
             'title' => $this->title,
             'description' => $this->description,
-            'assignee_id' => $this->assignee_id,
+            'assignee' => [
+                'id' => $this->assignee->id,
+                'firstName' => $this->assignee->firstName,
+                'lastName' => $this->assignee->lastName,
+                'email' => $this->assignee->email,
+                'phone' => $this->assignee->phone,
+                'department' => [
+                    'id' => $this->assignee->department->id,
+                    'name' => $this->assignee->department->name,
+                    'created_at' => $this->assignee->department->created_at,
+                    'updated_at' => $this->assignee->department->updated_at,
+                ],
+                'created_at' => $this->assignee->created_at,
+                'updated_at' => $this->assignee->updated_at,
+            ],
             'due_date' => $this->due_date,
-            'created' => $this->created_at,
+            'created_at' => $this->created_at,
+            'updated_at' => $this->updated_at,
         ];
     }
 }
