# storage/api-docs/api-docs.json
@@ -1106,7 +1106,7 @@
             },
             "Employee": {
                 "title": "Employee",
-                "description": "Employee model representing a employee entity.",
+                "description": "Employee response model representing the data returned by the API.",
                 "properties": {
                     "id": {
                         "description": "Employee ID",
@@ -1124,33 +1124,30 @@
                         "type": "string",
                         "example": "Doe"
                     },
+                    "phone": {
+                        "description": "Employee's phone number",
+                        "type": "string",
+                        "example": "123-456-7890"
+                    },
                     "email": {
                         "description": "Employee's email address",
                         "type": "string",
-                        "example": "john.doe@example.com"
+                        "example": "john.doe2@example.com"
                     },
-                    "phone": {
-                        "description": "Employee's phone number (optional)",
-                        "type": "string",
-                        "example": "+1 (123) 456-7890"
-                    },
-                    "department_id": {
-                        "description": "ID of the department to which the employee belongs",
-                        "type": "integer",
-                        "format": "int64",
-                        "example": "1"
+                    "department": {
+                        "$ref": "#/components/schemas/Department"
                     },
                     "created_at": {
                         "description": "Employee creation date",
                         "type": "string",
                         "format": "date-time",
-                        "example": "2023-08-01T01:41:44.000000Z"
+                        "example": "2023-08-01T01:54:27.000000Z"
                     },
                     "updated_at": {
                         "description": "Date of last employee update",
                         "type": "string",
                         "format": "date-time",
-                        "example": "2023-08-01T02:15:10.000000Z"
+                        "example": "2023-08-05T23:01:07.000000Z"
                     }
                 },
                 "type": "object"
@@ -1190,7 +1187,7 @@
             },
             "Task": {
                 "title": "Task",
-                "description": "Task model representing a task entity.",
+                "description": "Task response model representing the data returned by the API.",
                 "properties": {
                     "id": {
                         "description": "Task ID",
@@ -1204,33 +1201,30 @@
                         "example": "Complete Project Report"
                     },
                     "description": {
-                        "description": "Task description (optional)",
+                        "description": "Task description",
                         "type": "string",
                         "example": "Finish writing the project report"
                     },
-                    "assignee_id": {
-                        "description": "ID of the assigned employee",
-                        "type": "integer",
-                        "format": "int64",
-                        "example": "1"
+                    "assign": {
+                        "$ref": "#/components/schemas/Employee"
                     },
                     "due_date": {
-                        "description": "Due date for the task (optional)",
+                        "description": "Task due date",
                         "type": "string",
                         "format": "date-time",
-                        "example": "2023-08-15T10:00:00Z"
+                        "example": "2023-08-15 10:00:00"
                     },
                     "created_at": {
-                        "description": "Date and time when the task was created",
+                        "description": "Task creation date",
                         "type": "string",
                         "format": "date-time",
-                        "example": "2023-08-01T01:41:44.000000Z"
+                        "example": "2023-08-06T00:03:30.000000Z"
                     },
                     "updated_at": {
-                        "description": "Date and time of the last update to the task",
+                        "description": "Date of last task update",
                         "type": "string",
                         "format": "date-time",
-                        "example": "2023-08-01T02:15:10.000000Z"
+                        "example": "2023-08-06T00:03:30.000000Z"
                     }
                 },
                 "type": "object"
